--- a/package.json
+++ b/package.json
@@ -33,11 +33,20 @@
   },
   "homepage": "https://github.com/danielelkington/vue-camera-gestures#readme",
   "devDependencies": {
-    "rollup": "^0.57.1",
+    "rollup": "^1.21.2",
     "rollup-plugin-buble": "^0.19.2",
-    "rollup-plugin-vue": "^3.0.0",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-vue": "^5.0.1",
     "vue": "^2.5.16",
     "vue-template-compiler": "^2.5.16",
-    "vuepress": "^1.0.3"
+    "vuepress": "^1.0.4"
+  },
+  "dependencies": {
+    "@babel/polyfill": "^7.6.0",
+    "@tensorflow-models/knn-classifier": "^1.2.1",
+    "@tensorflow-models/mobilenet": "^2.0.4",
+    "@tensorflow/tfjs": "^1.2.9"
   }
 }
