--- a/vue-camera-gestures/package.json
+++ b/vue-camera-gestures/package.json
@@ -12,7 +12,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && vite build --config vite-no-dependencies.config.js",
     "serve": "vite preview"
   },
   "dependencies": {
